--- a/services.html
+++ b/services.html
@@ -14,6 +14,42 @@
   <link rel="icon" type="image/png" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <!-- Микроразметка Schema.org для Service -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Ассенизаторские услуги, откачка и прочистка канализации",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "Золотарь 58",
+      "image": "https://zolotar58.ru/logo.png",
+      "telephone": "+7-902-207-36-36",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "ул. Пушанина, 46а",
+        "addressLocality": "Пенза",
+        "addressCountry": "Россия"
+      }
+    },
+    "areaServed": {
+      "@type": "City",
+      "name": "Пенза"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Основные услуги",
+      "itemListElement": [
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Откачка канализации" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Прочистка труб и канализации" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Обслуживание септиков и выгребных ям" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Аварийный выезд 24/7" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Гидродинамическая и механическая чистка" } },
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Видеоинспекция труб" } }
+      ]
+    }
+  }
+  </script>
 </head>
 <body>
   <header class="header">
@@ -36,60 +72,60 @@
   </header>
 
   <div class="working-now-bar">
-    <span>💧 Работаем сейчас • Пушанина 46а, Пенза</span>
+    <span style="margin-right: 8px;">💧</span> Работаем сейчас &nbsp;<span style="font-size:1.15em;">•</span>&nbsp; Пушанина 46а, Пенза
   </div>
 
   <main>
-    <section class="main-intro fade-in">
+    <section class="main-intro">
       <h1>Услуги компании «Золотарь 58»</h1>
       <p class="main-subtitle">
-        Мы предоставляем весь спектр ассенизаторских услуг в Пензе и области.<br>
+        Мы предоставляем весь спектр ассенизаторских услуг в Пензе и области для частных и юридических лиц.<br>
         Круглосуточно, быстро, с гарантией результата.
       </p>
     </section>
 
     <section class="services-list">
-      <div class="service-card fade-in">
-        <img src="septic.jpg" alt="Откачка септиков и ям" class="service-img">
-        <h3>Откачка канализации и септиков</h3>
-        <p>Оперативная откачка и вывоз содержимого септиков, выгребных ям, колодцев, ливнёвок и пр. Собственный автопарк.</p>
-      </div>
-      <div class="service-card fade-in">
-        <img src="mechanical.jpg" alt="Механическая и гидродинамическая чистка" class="service-img">
-        <h3>Гидродинамическая и механическая чистка</h3>
-        <p>Устраняем засоры труб и канализации профессиональным оборудованием, работаем с любыми диамерами.</p>
-      </div>
-      <div class="service-card fade-in">
-        <img src="video.jpg" alt="Видеоинспекция труб" class="service-img">
-        <h3>Видеоинспекция труб</h3>
-        <p>Диагностика состояния трубопроводов камерой, поиск проблем, рекомендации по ремонту.</p>
-      </div>
-      <div class="service-card fade-in">
-        <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
-        <h3>Обслуживание организаций</h3>
-        <p>Официальные договоры, документы, комплексное обслуживание объектов юр. лиц и управляющих компаний.</p>
-      </div>
-      <div class="service-card fade-in">
-        <img src="search.jpg" alt="Аварийный выезд и поиск засоров" class="service-img">
-        <h3>Аварийный выезд 24/7</h3>
-        <p>Быстрая помощь при засорах, затоплениях, сбоях. Работаем по Пензе и области, без выходных.</p>
-      </div>
-      <div class="service-card fade-in">
-        <img src="photo_2025-05-31_22-06-25.jpg" alt="Фотоотчет: наша техника" class="service-img">
-        <h3>Реальные фото нашей работы</h3>
-        <p>Мы используем современную технику. Все фото — с реальных объектов клиентов!</p>
-      </div>
-    </section>
+  <div class="service-card">
+    <img src="septic.jpg" alt="Откачка септиков и ям" class="service-img">
+    <h3>Откачка канализации и септиков</h3>
+    <p>Оперативная откачка и вывоз содержимого септиков, выгребных ям, колодцев, ливнёвок и пр. Собственный автопарк.</p>
+  </div>
+  <div class="service-card">
+    <img src="mechanical.jpg" alt="Механическая и гидродинамическая чистка" class="service-img">
+    <h3>Гидродинамическая и механическая чистка</h3>
+    <p>Устраняем засоры труб и канализации профессиональным оборудованием, работаем с любыми диамерами.</p>
+  </div>
+  <div class="service-card">
+    <img src="video.jpg" alt="Видеоинспекция труб" class="service-img">
+    <h3>Видеоинспекция труб</h3>
+    <p>Диагностика состояния трубопроводов камерой, поиск проблем, рекомендации по ремонту.</p>
+  </div>
+  <div class="service-card">
+    <img src="service-org.jpg" alt="Обслуживание организаций" class="service-img">
+    <h3>Обслуживание организаций</h3>
+    <p>Официальные договоры, документы, комплексное обслуживание объектов юр. лиц и управляющих компаний.</p>
+  </div>
+  <div class="service-card">
+    <img src="search.jpg" alt="Аварийный выезд и поиск засоров" class="service-img">
+    <h3>Аварийный выезд 24/7</h3>
+    <p>Быстрая помощь при засорах, затоплениях, сбоях. Работаем по Пензе и области, без выходных.</p>
+  </div>
+  <div class="service-card">
+    <img src="photo_2025-05-31_22-06-25.jpg" alt="Фотоотчет: наша техника" class="service-img">
+    <h3>Реальные фото нашей работы</h3>
+    <p>Мы используем современную технику. Все фото — с реальных объектов клиентов!</p>
+  </div>
+</section>
 
-    <section class="about-text fade-in" style="margin-top: 42px;">
+    <section class="about-text" style="margin-top: 42px;">
       <h2>Преимущества работы с нами</h2>
       <ul>
-        <li>✅ Официальный подрядчик по Пензе и области</li>
-        <li>⏰ Круглосуточная поддержка</li>
-        <li>💰 Честные цены без скрытых платежей</li>
-        <li>🏢 Работаем с частными лицами и организациями</li>
-        <li>📄 Документы для юр. лиц и управляющих компаний</li>
-        <li>📞 Всегда на связи по телефону: <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a></li>
+        <li>Официальный подрядчик по Пензе и области</li>
+        <li>Круглосуточная поддержка</li>
+        <li>Честные цены без скрытых платежей</li>
+        <li>Работаем с частными лицами и организациями</li>
+        <li>Документы для юр. лиц и управляющих компаний</li>
+        <li>Всегда на связи по телефону: <a href="tel:+79022073636" class="phone-link">+7-902-207-36-36</a></li>
       </ul>
     </section>
   </main>
@@ -104,6 +140,7 @@
   </footer>
 
   <script>
+    // Бургер меню
     document.addEventListener("DOMContentLoaded", function () {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
@@ -117,17 +154,6 @@
           burger.classList.remove('active');
         }
       });
-
-      // Анимация появления при скролле
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            entry.target.classList.add('visible');
-          }
-        });
-      }, { threshold: 0.1 });
-
-      document.querySelectorAll('.fade-in').forEach(el => observer.observe(el));
     });
   </script>
 </body>
