--- a/about.html
+++ b/about.html
@@ -20,21 +20,26 @@
   <!-- Organization -->
   <script type="application/ld+json">
   {
-    "@context":"https://schema.org",
-    "@type":"Organization",
-    "name":"Золотарь 58",
-    "legalName":"ИП Зоткин А.И.",
-    "url":"https://zolotar58.ru",
-    "logo":"https://zolotar58.ru/logo.png",
-    "foundingDate":"2020",
-    "founders":[{"@type":"Person","name":"Зоткин Александр Иванович"}],
-    "address":{"@type":"PostalAddress","streetAddress":"ул. Пушанина, 46а","addressLocality":"Пенза","addressRegion":"Пензенская область","postalCode":"440000","addressCountry":"Россия"},
-    "contactPoint":{"@type":"ContactPoint","telephone":"+79022073636","contactType":"customer service","email":"zolotar58@yandex.ru","areaServed":"Пенза и область","availableLanguage":"Russian"},
-    "sameAs":["https://uslugi.yandex.ru/profile/AleksandrZotkin-886001"]
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Золотарь 58",
+    "legalName": "ИП Зоткин А.И.",
+    "url": "https://zolotar58.ru",
+    "logo": "https://zolotar58.ru/logo.png",
+    "foundingDate": "2020",
+    "address": {"@type":"PostalAddress","streetAddress":"ул. Пушанина, 46а","addressLocality":"Пенза","addressRegion":"Пензенская область","postalCode":"440000","addressCountry":"Россия"},
+    "contactPoint": {"@type":"ContactPoint","telephone":"+79022073636","contactType":"customer service","email":"zolotar58@yandex.ru","areaServed":"Пенза и область","availableLanguage":"Russian"}
   }
   </script>
 </head>
 <body>
+  <!-- Языковой переключатель + скрытый элемент Google -->
+  <div class="lang-switcher" aria-label="Выбор языка">
+    <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
+    <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
+  </div>
+  <div id="google_translate_element" class="visually-hidden"></div>
+
   <header class="header" id="sticky-header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
@@ -62,7 +67,6 @@
       <p class="main-subtitle">
         Профессиональные ассенизаторские услуги в Пензе с 2020 года. Современное оборудование, официальные документы, гарантия качества.
       </p>
-      <a class="cta" href="tel:+79022073636" aria-label="Позвонить в Золотарь 58">Позвонить</a>
     </section>
 
     <section class="about-content">
@@ -132,7 +136,7 @@
       <article class="cta-section">
         <h2>Готовы помочь прямо сейчас</h2>
         <p>Круглосуточный выезд по Пензе и области</p>
-        <a href="tel:+79022073636" class="cta" aria-label="Позвонить сейчас">Позвонить</a>
+        <a href="tel:+79022073636" class="cta-button">Позвонить: +7 (902) 207-36-36</a>
       </article>
     </section>
   </main>
@@ -153,31 +157,63 @@
   </footer>
 
   <script>
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement(
+        {pageLanguage: 'ru', includedLanguages: 'ru,en', autoDisplay: false},
+        'google_translate_element'
+      );
+      var saved = localStorage.getItem('site_lang');
+      if (saved) setTimeout(function(){ setLang(saved); }, 400);
+    }
+    function setLang(lang) {
+      var combo = document.querySelector('select.goog-te-combo');
+      if (!combo) return;
+      combo.value = lang;
+      combo.dispatchEvent(new Event('change'));
+      localStorage.setItem('site_lang', lang);
+      document.querySelectorAll('.lang-btn').forEach(b=>{
+        b.classList.toggle('active', b.dataset.lang === lang);
+      });
+      document.documentElement.setAttribute('lang', lang === 'en' ? 'en' : 'ru');
+    }
+    document.addEventListener('click', function(e){
+      var btn = e.target.closest('.lang-btn');
+      if (!btn) return;
+      e.preventDefault();
+      setTimeout(function(){ setLang(btn.dataset.lang); }, 50);
+    });
+
     document.addEventListener("DOMContentLoaded", function() {
       const burger = document.querySelector('.burger');
       const nav = document.querySelector('.nav');
-      burger.addEventListener('click', function(e) {
-        e.stopPropagation();
-        nav.classList.toggle('open');
-        burger.classList.toggle('active');
-        document.body.classList.toggle('no-scroll');
-      });
-      document.addEventListener('click', function(e) {
-        if (!burger.contains(e.target) && !nav.contains(e.target)) {
-          nav.classList.remove('open');
-          burger.classList.remove('active');
-          document.body.classList.remove('no-scroll');
-        }
-      });
+      if (burger && nav) {
+        burger.addEventListener('click', function(e) {
+          e.stopPropagation();
+          nav.classList.toggle('open');
+          burger.classList.toggle('active');
+          document.body.classList.toggle('no-scroll');
+        });
+        document.addEventListener('click', function(e) {
+          if (!burger.contains(e.target) && !nav.contains(e.target)) {
+            nav.classList.remove('open');
+            burger.classList.remove('active');
+            document.body.classList.remove('no-scroll');
+          }
+        });
+      }
     });
 
-    // Плавная прокрутка (якоря)
+    // Плавная прокрутка якорей (если используются)
     document.querySelectorAll('a[href^="#"]').forEach(a=>{
-      a.addEventListener('click',e=>{
+      a.addEventListener('click', function(e){
+        const tgt = document.querySelector(this.getAttribute('href'));
+        if (!tgt) return;
         e.preventDefault();
-        document.querySelector(a.getAttribute('href'))?.scrollIntoView({behavior:'smooth'});
+        tgt.scrollIntoView({behavior:'smooth'});
       });
     });
   </script>
+  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+  <div id="google_translate_element" class="visually-hidden"></div>
 </body>
 </html>
