--- a/services.html
+++ b/services.html
@@ -41,10 +41,10 @@
   <a class="skip-link" href="#main">К основному содержимому</a>
 
   <!-- Языковой переключатель + скрытый элемент Google -->
-  <div class="lang-switcher" aria-label="Выбор языка">
-    <button type="button" class="lang-btn" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
-    <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
-  </div>
+ <div class="lang-switcher" aria-label="Выбор языка">
+      <button type="button" class="lang-btn" data-lang="ru" title="Русский">🇷🇺 RU</button>
+      <button type="button" class="lang-btn" data-lang="en" title="English">🇬🇧 EN</button>
+    </div>
   <div id="google_translate_element" class="visually-hidden" aria-hidden="true"></div>
 
   <header class="header" role="banner">
